Fixed overflow problem

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,8 @@
 
 	--primary-dark: #242424;
 	--secondary-dark: rgb(55, 54, 54);
-	--accent: #00e600;
+	--green: #00e600;
+	--red: #e60000;
 
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
